--- a/SymptomsAPI/src/main/resources/application.properties
+++ b/SymptomsAPI/src/main/resources/application.properties
@@ -8,3 +8,4 @@ spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
 
 spring.mvc.view.prefix = /WEB-INF/
 spring.mvc.view.suffix = .jsp
+server.port=80
